# iot_readings_etl

./: .envrc-template  .gitignore  ETL_example_map.excalidraw  Makefile  README.md  conftest.py  pyproject.toml  samconfig.toml  setup.py  stress_t.py  template.yaml
data/: raw-2.json
src/data_asset_uploader/: raw_data_files_S3_uploader.py
src/lambda_pooling/: s3bronze_file_events_pooling.py
src/lambda_processing/: files_processor.py  parquet_files_processor.py  requirements.txt
tests/: factories.py
tests/data_asset_uploader/: test_integration.py  test_raw_data_files_S3_uploader.py
tests/lambdas/: test_files_processor.py  test_parquet_files_processor.py  test_s3bronze_file_events_pooling.py
tests/lambdas/fixtures/: raw_data_file_sqs_messages.json  s3bronze_raw_data_file_event_sqs.json
